--- a/palette-picker/package.json
+++ b/palette-picker/package.json
@@ -1,17 +1,22 @@
 {
   "name": "palette-picker",
+  "homepage": "https://raffycastlee.github.io/2-3-0-solo-project_palette-picker/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "vite": "^5.4.10"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.3.3",
     "uuid": "^11.0.3"
   }
 }
